# compiler-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  compiler  compiler.c  hello.cd  test.cd
fe/: parser.c  parser.h  parserUtils.h
fe/ast/: ast.h  astDefs.h  astStructure.h
fe/bufin/: buffer.c  buffer.h  bufferedStream.h
fe/description/: cd.asdl  cd.gram
fe/lexer/: token.c  token.h  tokenizer.c  tokenizer.h  utility.h
fe/lexer/bufin/: buffer.c  buffer.h  bufferedStream.c  bufferedStream.h
test/: CMakeLists.txt  queueTests.c  stackTests.c  symbolTableTests.c  testUtils.c  tests.c  testutils.c  testutils.h
util/: CMakeLists.txt  primitives.h  typeSystem.h
util/loggers/: errorLogger.h  logger.c  logger.h  parserLogger.h
util/structures/: queue.c  queue.h  stack.c  stack.h  symbolTable.c  symbolTable.h
util/typesystem/: primitives.c  primitives.h  typeSystem.c  typeSystem.h
util/values/: FunctionValue.h
visitors/: generatorVisitor.h  printVisitor.h  typecheckVisitor.h  visitor.h
